@@ -83,12 +83,22 @@ class VersaPayTest < Test::Unit::TestCase
   def test_error_code_from_errors
     # a HTTP 412 response structure
     error = @gateway.send(:error_code_from, { 'success' => false, 'errors' => ['fund_address_unspecified'], 'response_code' => 999 }, 'sale')
-    assert_equal error, 'response_code: 999'
+    assert_equal error, nil
   end
 
   def test_error_code_from_gateway_error_code
     error = @gateway.send(:error_code_from, declined_errors, 'sale')
-    assert_equal error, 'gateway_error_code: 567.005 | response_code: 999'
+    assert_equal error, '567.005'
+  end
+
+  def test_message_error_from_wallet
+    message = @gateway.send(:message_from, wallet_error, 'store')
+    assert_equal message, "error: Validation failed: CVV can't be blank, CVV should be a number, CVV too short (minimum is 3 characters), CVV should be 3 digits"
+  end
+
+  def test_message_error_from_loggin
+    message = @gateway.send(:message_from, log_in_error, 'authorize')
+    assert_equal message, 'error: Please log in or create an account to continue.'
   end
 
   def test_message_from_successful_purchase
@@ -885,6 +895,18 @@ class VersaPayTest < Test::Unit::TestCase
         'credit_card_brand' => 'visa',
         'credit_card_expiry' => '092025' }],
      'response_code' => 999 }
+  end
+
+  def log_in_error
+    { 'error' => 'Please log in or create an account to continue.' }
+  end
+
+  def wallet_error
+    { 'wallet_token' => nil,
+     'fund_token' => nil,
+     'wallets' =>
+      { 'error' =>
+        "Validation failed: CVV can't be blank, CVV should be a number, CVV too short (minimum is 3 characters), CVV should be 3 digits" } }
   end
 
   def pre_scrubbed
