@@ -109,6 +109,7 @@
 * Priority: fix for bin lookup [Buitragox] #5366
 * CommerceHub: Update merchantInvoiceNumber & merchantTransactionId [almalee24] #5374
 * VersaPay: refactor authorization from structure [gasb150] #5363
+* VersaPay: Improve Message Error and Error Mapping [gasb150] #5357
 
 == Version 1.137.0 (August 2, 2024)
 * Unlock dependency on `rexml` to allow fixing a CVE (#5181).
